--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -27,6 +27,9 @@ jobs:
       with:
         azcliversion: 'latest'
         inlineScript: |
+          chmod -x azure/agents/deployAgents.sh
+          azure/agents/deployAgents.sh
+
           chmod +x azure/aks/deployAks.sh
           azure/aks/deployAks.sh
 
