--- a/gitops/argocd/argocd/kustomization.yaml
+++ b/gitops/argocd/argocd/kustomization.yaml
@@ -2,11 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
--  https://raw.githubusercontent.com/argoproj/argo-cd/v2.2.0/manifests/install.yaml
+- resources/argocd-namespace.yaml
+- https://raw.githubusercontent.com/argoproj/argo-cd/v2.2.0/manifests/install.yaml
+- resources/argocd-repositories.yaml
 
-  #patchesStrategicMerge:
-  #- overlays/dev/argocd-cm.yaml
-  #- overlays/dev/argocd-rbac-cm.yaml
+patchesStrategicMerge:
+- overlays/dev/argocd-cm.yaml
+- overlays/dev/argocd-rbac-cm.yaml
 
 patchesJson6902:
 - path: overlays/dev/argocd-server-deploy-command.yaml
