--- a/gitops/argocd/argocd/kustomization.yaml
+++ b/gitops/argocd/argocd/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 - https://raw.githubusercontent.com/argoproj/argo-cd/v2.2.0/manifests/install.yaml
 - resources/argocd-repositories.yaml
 - https://raw.githubusercontent.com/argoproj-labs/applicationset/v0.3.0/manifests/install.yaml
+- resources/git-directories.yaml
 
 patchesStrategicMerge:
 - overlays/dev/argocd-cm.yaml
