--- a/gitops/argocd/argocd/resources/git-directories.yaml
+++ b/gitops/argocd/argocd/resources/git-directories.yaml
@@ -21,3 +21,6 @@ spec:
       destination:
         server: https://kubernetes.default.svc
         namespace: '{{path.basename}}'
+      syncPolicy:
+        automated:
+          prune: true
