--- a/gitops/argocd/git-generator-directory/cluster-addons/external-dns/values.yaml
+++ b/gitops/argocd/git-generator-directory/cluster-addons/external-dns/values.yaml
@@ -100,7 +100,7 @@ external-dns:
   ## Available providers are:
   ## - alibabacloud, aws, azure, azure-private-dns, cloudflare, coredns, designate, digitalocean, google, hetzner, infoblox, linode, rfc2136, transip
   ##
-  provider: aws
+  provider: azure
   ## @param initContainers Attach additional init containers to the pod (evaluated as a template)
   ##
   initContainers: []
