--- a/gitops/argocd/git-generator-directory/cluster-addons/external-dns/values.yaml
+++ b/gitops/argocd/git-generator-directory/cluster-addons/external-dns/values.yaml
@@ -208,7 +208,7 @@ external-dns:
     ## When a secret to load azure.json is not specified, the host's /etc/kubernetes/azure.json will be used
     ## @param azure.secretName When using the Azure provider, set the secret containing the `azure.json` file
     ##
-    secretName: ""
+    secretName: "azure-config-file"
     ## @param azure.cloud When using the Azure provider, set the Azure Cloud
     ##
     cloud: ""
