--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -24,6 +24,7 @@ jobs:
       # Deploy resources
     - name: Azure CLI script
       uses: azure/CLI@v1
+      uses: sergeysova/jq-action@v2
       with:
         azcliversion: 'latest'
         inlineScript: |
