add bicep modules

--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -31,6 +31,8 @@ jobs:
         inlineScript: |
           #chmod +x azure/agents/deployAgents.sh
           #azure/agents/deployAgents.sh
+	  
+	  azure/bicep-modules/deployModules.sh
 
           chmod +x azure/aks/deployAks.sh
           azure/aks/deployAks.sh
