--- a/.github/workflows/azuredeploy.yaml
+++ b/.github/workflows/azuredeploy.yaml
@@ -32,6 +32,7 @@ jobs:
           #chmod +x azure/agents/deployAgents.sh
           #azure/agents/deployAgents.sh
 	  
+	  chmod +x azure/bicep-modules/deployModules.sh
 	  azure/bicep-modules/deployModules.sh
 
           chmod +x azure/aks/deployAks.sh
