--- a/.github/workflows/azure-aks.yaml
+++ b/.github/workflows/azure-aks.yaml
@@ -10,7 +10,7 @@ jobs:
     secrets:
         azure_credentials: ${{ secrets.QBITS_AZURE_CREDENTIALS }}
 
-    # Deploy resources
+    # Deploy resources.
     - name: Azure CLI script
       uses: azure/CLI@v1
       with:
