--- a/.github/workflows/azure-aks.yaml
+++ b/.github/workflows/azure-aks.yaml
@@ -22,16 +22,23 @@ jobs:
         creds: ${{ secrets.QBITS_AZURE_CREDENTIALS }}
     
     - uses: sergeysova/jq-action@v2
+    
+      # Deploy VNET 
+    - name: VNET
+      uses: azure/CLI@v1
+      working-directory: azure/vnet
+      with:
+        azcliversion: 'latest'
+        inline: |
+          chmod +x azure/vnet/deployVnet.sh
+          azure/vnet/deployVnet.sh 
 
-      # Deploy resources
+      # Deploy AKS 
     - name: Azure CLI script
       uses: azure/CLI@v1
       with:
         azcliversion: 'latest'
         inlineScript: |
-          chmod +x azure/vnet/deployVnet.sh
-          azure/vnet/deployVnet.sh 
-
           chmod +x azure/aks/deployAks.sh
           azure/aks/deployAks.sh
 
