--- a/.github/workflows/azure-aks.yaml
+++ b/.github/workflows/azure-aks.yaml
@@ -8,6 +8,7 @@ env:
   AZURE_SUBSCRIPTION_ID: a83145a3-215b-44a4-9387-a540faaa58e9
   AZURE_AKS_NAME: aks-qbits
   AZURE_AKS_RESOURCE_GROUP: rg-aks
+  AZURE_VNET_RESOURCE_GROUP: rg-main
 
 jobs:
   build-and-deploy:
@@ -28,7 +29,7 @@ jobs:
       uses: azure/arm-deploy@v1
       with:
         subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
-        resourceGroupName: ${{ env.AZURE_AKS_RESOURCE_GROUP }}
+        resourceGroupName: ${{ env.AZURE_VNET_RESOURCE_GROUP }}
         template: ./azure/vnet/vnet.bicep
         failOnStdErr: false
 
