add params green

--- a/.github/workflows/azure-aks.yaml
+++ b/.github/workflows/azure-aks.yaml
@@ -6,7 +6,9 @@ env:
   AZURE_RESOURCE_GROUP: rg-main
   AZURE_DNS_ZONE: qbits.no
   AZURE_SUBSCRIPTION_ID: a83145a3-215b-44a4-9387-a540faaa58e9
-  AZURE_AKS_NAME: aks-qbits
+  AZURE_AKS_NAME_GREEN: aks-qbits-green
+  AZURE_AKS_SUBNET_GREEN: subnet-aks-green
+  AZURE_AKS_DNS_PREFIX: aks-qbits-green
   AZURE_AKS_RESOURCE_GROUP: rg-aks
   AZURE_VNET_RESOURCE_GROUP: rg-main
 
@@ -40,12 +42,15 @@ jobs:
         azcliversion: 'latest'
         inlineScript: |
           chmod +x azure/aks/deployAks.sh
-          azure/aks/deployAks.sh
+          azure/aks/deployAks.sh \
+            {{ env.AZURE_AKS_NAME_GREEN }} \
+            {{ env.AZURE_AKS_SUBNET_GREEN }} \
+            {{ env.AZURE_AKS_DNS_PREFIX }} 
 
     - uses: azure/aks-set-context@v1
       with:
         creds: '${{ secrets.QBITS_AZURE_CREDENTIALS }}'
-        cluster-name: ${{ env.AZURE_AKS_NAME }}
+        cluster-name: ${{ env.AZURE_AKS_NAME_GREEN }}
         resource-group: ${{ env.AZURE_AKS_RESOURCE_GROUP }}
 
     - run: |
